# handy-apis

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  CONVEX_API.md  INSTALL.md  README.md  TESTING.md  content-scraper-api.py  convex-api.py  current_architecture.md  deploy.py  docpull  docpull.py  faculty-scraper-api.py  github-workflow-example.yml  pyproject.toml  requirements.txt  scrape.py  selectors.json  setup.py  teardown.py  test_modal.py  ui-server.py  ui.html
api/: scraper.py  server.py  urls.py  worker.py
cli/: chat.py  main.py  store.py
clients/: convex_client.py  docs_client.py
config/: sites.json  utils.py
convex-backend/: README.md  package.json
data/: claude-code_links.json  cocoindex_links.json  convex_links.json  corridor_links.json  crawl4ai_links.json  datadog_links.json  mistral_links.json  modal_links.json  opencode_links.json  promptfoo_links.json  selectors.json  terraform-aws_links.json  terraform_aws_links.json  together_links.json  unsloth_links.json
design/: agent-queue.md
docs/: ACCESS_KEY_PR.md
luggage/: ARCHITECTURE.md
notebooks/: sandbox.ipynb
sandbox/: __init__.py  docs.py  image.py  opencode.py  sandbox.py
scraper/: __init__.py  bulk.py  cache.py  collections.py  core.py  docs_cache.py  examples.py  extract.py  models.py  types.py  urls.py
scripts/: scrape.py
tests/: __init__.py  test_bulk.py  test_convex_api.py  test_cursor_all_links.py  test_job_queue.py  test_modal.py  test_sandbox_run.py  test_shared_workspace.py  test_sites_content.py  test_sites_links.py  test_terraform_all_links.py  (+2 more)
(+27 files in other folders)
