[project]
name = "docpull"
version = "0.1.0"
description = "CLI tool to fetch and cache documentation as markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "modal>=1.2.5",
    "python-dotenv>=1.2.1",
    "typer>=0.15.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
docpull = "cli.main:app"
